with help from discord TOP - I had to change align items to center to get the correct effect without the extra div container.

--- a/flex/05-flex-modal/style.css
+++ b/flex/05-flex-modal/style.css
@@ -57,7 +57,7 @@ body {
   height: 24px;
   width: 24px;
   display: flex;
-  align-self: flex-end;
+  align-items: flex-start;
   justify-content: center;
   margin: 20px;
   flex: 1 0 auto;
